--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -7,7 +7,8 @@
       <label id="result">Your score is <b id="score"> {{exam.mark}} </b> point."
       </label><br/>
     </div>
-  </div>
+  </div >
+  <div id="exam">
   <table>
     <tbody>
     <div *ngFor="let question of listQuestion ;let i=index;">
@@ -66,6 +67,7 @@
     </div>
     </tbody>
   </table>
+  </div>
   <div>
     <button routerLink="/" class="btn btn-outline-info  rounded"><a href="">Other test </a></button>
   </div>
