--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -32,12 +32,18 @@
       </div>
     </div>
     <div class="form-group row mt-3">
-      <div class="col-md-12 d-flex justify-content-center flex-column align-items-center">
+      <div class="col-sm-1"></div>
+      <div class="col-md-5 d-flex justify-content-center flex-column align-items-center">
         <button class="btn rounded" (click)="logOut()">Log out</button>
+      </div>
+        <div *ngIf="jwtService.getAuthorities().includes('ROLE_ADMIN')" class="col-md-5 d-flex justify-content-center flex-column align-items-center">
+          <button class="btn rounded" [routerLink]="'list/user'">Manager</button>
+        </div>
+      <div class="col-sm-1"></div>
       </div>
     </div>
   </div>
-</div>
+
 
 <ng-template #loggedOut>
   <!-- <div class="card-body m-3 rounded login-background">
