--- a/project/FE/src/app/user/detail-user/detail-user.component.html
+++ b/project/FE/src/app/user/detail-user/detail-user.component.html
@@ -1,58 +1,55 @@
 <div class="col-sm-12">
-    <div class="title card-header">
-      <span>Personal Information</span>
-    </div>
-    <div class="form-row pr-5 pt-5">
-      <div class="col-md-4 form-group text-center pl-4">
-        <p>Avatar</p>
-          <div class="col-lg-2 col-6">
-            <a class='btn btn-upload' [href]="downloadURL">
-<!--              {{ downloadURL }}-->
-<!--              <img src="{{ava.imagenes}}" alt="avatar" style="width: 200px; height: 230px">-->
-            </a>
-            <input type="file" multiple (change)="detectFiles($event)">
-            <button (click)="uploadFile()" class="btn btn-primary">Update</button>
-            <div>{{ uploadPercent | async }}</div>
-            <a [href]="downloadURL">{{ downloadURL }}</a>
-          </div>
+  <div class="title card-header">
+    <span>Personal Information</span>
+  </div>
+  <div class="row">
+    <div class="col-md-5 form-group p-0 m-0">
+      <div class="card">
+        <p class="card-title text-center font-weight-bold">Avatar</p>
+        <a class='btn btn-upload' [href]="downloadURL">
+          <img class="card-img" src="{{user.avatar}}">
+        </a>
+        <div class="card-body justify-content-lg-start">
+          <input type="file" multiple (change)="detectFiles($event)">
+          <button (click)="uploadFile()" class="btn btn-primary mt-2">Update</button>
+          <div class="mt-2">{{ uploadPercent | async }}</div>
+          <a class="mt-2" [href]="user.avatar">LINK</a>
+        </div>
       </div>
     </div>
-      <div class="col-md-8 pl-0 ml-0">
-        <table class="w-100 h-100">
-          <tr style="background-color: #f5f5f5">
-            <td>User: </td>
-            <td>{{user.username}}</td>
-          </tr>
-          <tr style="background-color: #DFF0D8">
-            <td>Name: </td>
-            <td>{{user.fullName}}</td>
-          </tr>
-          <tr style="background-color: #FCF8E3">
-            <td>Email: </td>
-            <td>{{user.email}}</td>
-          </tr>
-          <tr style="background-color: #F2DEDE">
-            <td>Address: </td>
-            <td>{{user.address}}</td>
-          </tr>
-          <tr style="background-color: #D9EDF7">
-            <td>Phone: </td>
-            <td>{{user.phoneNumber}}</td>
-          </tr>
-        </table>
-      </div>
-    <div class="form-row ml-5 pl-4">
-      <div class="col-md-1 form-group pl-5 ml-3">
-        <button type="button" (click)="saveAvatar()" class="btn btn-outline-secondary">Update</button>
-      </div>
-      <div class="col-md-10 ml-5 pt-2">
-        <span class='label label-info text-info' id="upload-file-info"></span>
-      </div>
+    <div class="col-md-7">
+      <table class="w-100 h-100">
+        <tr style="background-color: #f5f5f5">
+          <td>User:</td>
+          <td>{{user.username}}</td>
+        </tr>
+        <tr style="background-color: #DFF0D8">
+          <td>Name:</td>
+          <td>{{user.fullName}}</td>
+        </tr>
+        <tr style="background-color: #FCF8E3">
+          <td>Email:</td>
+          <td>{{user.email}}</td>
+        </tr>
+        <tr style="background-color: #F2DEDE">
+          <td>Address:</td>
+          <td>{{user.address}}</td>
+        </tr>
+        <tr style="background-color: #D9EDF7">
+          <td>Phone:</td>
+          <td>{{user.phoneNumber}}</td>
+        </tr>
+      </table>
     </div>
-    <div class="form-row">
-      <div class="col-md-12 form-group text-center">
-        <a [routerLink]="['/update-user/:id']" class="btn btn-info">Edit</a>
-        <a [routerLink]="['update-user/:id']" class="btn btn-info">History</a>
-      </div>
+  </div>
+  <div class="row d-flex mt-2 justify-content-center">
+    <div class="col-md-5 text-center">
+      <button type="button" (click)="saveAvatar()" class="btn btn-outline-secondary">Update</button>
     </div>
+    <div class="col-md-7 text-center">
+      <a [routerLink]="['/update-user']" class="btn btn-info">Edit</a>
+      <a [routerLink]="['update-user/:id']" class="btn btn-info">History</a>
+    </div>
+  </div>
 </div>
+
