--- a/project/FE/src/app/user/detail-user/detail-user.component.html
+++ b/project/FE/src/app/user/detail-user/detail-user.component.html
@@ -52,7 +52,7 @@
     <div class="form-row">
       <div class="col-md-12 form-group text-center">
         <a [routerLink]="['/update-user/:id']" class="btn btn-info">Edit</a>
-        <a [routerLink]="['update-user/:id']" class="btn btn-info">History</a>
+        <a [routerLink]="['/history']" class="btn btn-info">History</a>
       </div>
     </div>
 </div>
