--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -46,13 +46,13 @@
               <span class="badge badge-pill badge-secondary float-right mt-1">092.2216.3113</span>
             </li>
           </ul>
-          <div class="card online-support-massage">
-            <div class="card-body">
-              <img
-                src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png"
-                alt="mess">
-              MESSENGER</div>
-          </div>
+<!--          <div class="card online-support-massage">-->
+<!--            <div class="card-body">-->
+<!--              <img-->
+<!--                src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png"-->
+<!--                alt="mess">-->
+<!--              MESSENGER</div>-->
+<!--          </div>-->
         </div>
       </div>
     </div>
