--- a/project/FE/src/app/user/detail-user/detail-user.component.html
+++ b/project/FE/src/app/user/detail-user/detail-user.component.html
@@ -1,8 +1,9 @@
-<div class="col-sm-12">
-  <div class="title card-header">
+<div class="row">
+  <div class="col-sm-12 title card-header">
     <span>Personal Information</span>
   </div>
-  <div class="row">
+</div>
+  <div class="row mt-2">
     <div class="col-md-5 form-group p-0 m-0">
       <div class="card">
         <p class="card-title text-center font-weight-bold">Avatar</p>
@@ -17,7 +18,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-7 p-0 m-0">
       <table class="w-100 h-100">
         <tr style="background-color: #f5f5f5">
           <td>User:</td>
@@ -51,5 +52,5 @@
       <a [routerLink]="['update-user/:id']" class="btn btn-info">History</a>
     </div>
   </div>
-</div>
+
 
