--- a/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
@@ -16,7 +16,7 @@
             <tr>
             <th style="font-weight: normal">{{questionList.no}}</th>
             <td>{{questionList.questionId}}</td>
-            <td class="text-left">{{questionList.question}}</td>
+            <td class="text-left">{{questionList.questionName}}</td>
             <td>
               <div class="border">
                 <div class="navbar  bg-answer-1">{{questionList.answerA}}</div>
