--- a/project/FE/src/app/question/add-question-in-exam/add-question-in-exam.component.html
+++ b/project/FE/src/app/question/add-question-in-exam/add-question-in-exam.component.html
@@ -22,7 +22,7 @@
           <tr *ngFor="let questionList of question">
             <th style="font-weight: normal">{{questionList.no}}</th>
             <td>{{questionList.questionId}}</td>
-            <td class="text-left">{{questionList.question}}</td>
+            <td class="text-left">{{questionList.questionName}}</td>
             <td>
               <div class="border">
                 <div class="navbar  bg-answer-1">{{questionList.answerA}}</div>
