--- a/project/FE/src/app/user/detail-user/detail-user.component.html
+++ b/project/FE/src/app/user/detail-user/detail-user.component.html
@@ -3,53 +3,55 @@
     <span>Personal Information</span>
   </div>
 </div>
-  <div class="row mt-2">
-    <div class="col-md-5 form-group p-0 m-0">
-      <div class="card">
-        <p class="card-title text-center font-weight-bold">Avatar</p>
-        <a class='btn btn-upload' [href]="downloadURL">
-          <img class="card-img" src="{{user.avatar}}">
-        </a>
-        <div class="card-body justify-content-lg-start">
-          <input type="file" multiple (change)="detectFiles($event)">
-          <button (click)="uploadFile()" class="btn btn-primary mt-2">Update</button>
-          <div class="mt-2">{{ uploadPercent | async }}</div>
-          <a class="mt-2" [href]="user.avatar">LINK</a>
-        </div>
+<div class="row mt-2">
+  <div class="col-md-5 form-group p-0 m-0">
+    <div class="card">
+      <p class="card-title text-center font-weight-bold">Avatar</p>
+      <a class='btn btn-upload' [href]="downloadURL">
+        <img class="card-img" src="{{displayAvatar}}">
+      </a>
+      <div class="card-body justify-content-lg-start">
+        <input type="file" multiple (change)="detectFiles($event)">
+        <button (click)="uploadFile()" class="btn btn-primary mt-2">Upload</button>
+        <div class="mt-2">{{ uploadPercent | async }}</div>
+        <a class="mt-2" [href]="user.avatar">LINK</a>
       </div>
     </div>
-    <div class="col-md-7 p-0 m-0">
-      <table class="w-100 h-100">
-        <tr style="background-color: #f5f5f5">
-          <td>User:</td>
-          <td>{{user.username}}</td>
-        </tr>
-        <tr style="background-color: #DFF0D8">
-          <td>Name:</td>
-          <td>{{user.fullName}}</td>
-        </tr>
-        <tr style="background-color: #FCF8E3">
-          <td>Email:</td>
-          <td>{{user.email}}</td>
-        </tr>
-        <tr style="background-color: #F2DEDE">
-          <td>Address:</td>
-          <td>{{user.address}}</td>
-        </tr>
-        <tr style="background-color: #D9EDF7">
-          <td>Phone:</td>
-          <td>{{user.phoneNumber}}</td>
-        </tr>
-      </table>
-    </div>
-    <div class="row d-flex mt-2 justify-content-center">
+  </div>
+  <div class="col-md-7 p-0 m-0">
+    <table class="w-100 h-100">
+      <tr style="background-color: #f5f5f5">
+        <td>User:</td>
+        <td>{{user.username}}</td>
+      </tr>
+      <tr style="background-color: #DFF0D8">
+        <td>Name:</td>
+        <td>{{user.fullName}}</td>
+      </tr>
+      <tr style="background-color: #FCF8E3">
+        <td>Email:</td>
+        <td>{{user.email}}</td>
+      </tr>
+      <tr style="background-color: #F2DEDE">
+        <td>Address:</td>
+        <td>{{user.address}}</td>
+      </tr>
+      <tr style="background-color: #D9EDF7">
+        <td>Phone:</td>
+        <td>{{user.phoneNumber}}</td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-sm-12">
+    <div class="row mt-2">
     <div class="col-md-5 text-center">
       <button type="button" (click)="saveAvatar()" class="btn btn-outline-secondary">Update</button>
     </div>
-      <div class="col-md-7 text-center">
-        <a [routerLink]="['/update-user/:id']" class="btn btn-info">Edit</a>
-        <a [routerLink]="['/history']" class="btn btn-info">History</a>
-      </div>
+    <div class="col-md-6 text-center d-inline-flex justify-content-center">
+      <a [routerLink]="['/update-user/:id']" class="btn btn-info">Edit</a>
+      <a [routerLink]="['/history']" class="btn btn-info">History</a>
+    </div>
+    </div>
   </div>
-
+</div>
 
