--- a/project/FE/src/app/user/update-user/update-user.component.html
+++ b/project/FE/src/app/user/update-user/update-user.component.html
@@ -65,7 +65,7 @@
       <div class="row mb-1 mt-4">
         <div class="col-md-12 text-center">
           <button class="btn btn-light border-secondary mr-1">Submit</button>
-          <a routerLink="update-password/:id" class="btn btn-info ml-1">Edit Password</a>
+          <a [routerLink]="'/update-password'" class="btn btn-info ml-1">Edit Password</a>
         </div>
       </div>
     </div>
